# book_app

./: .gitignore  Makefile  README.md  pyproject.toml  run.py  settings.py
api/routes/: books.py  words.py
api/services/: epub.py
api/utils/: books_navigation.py
books_stored/: Wells Martha. All Systems Red (The Murderbot Diaries) - royallib.com.epub  pratchett_rinsvind-koen-i-volshebniki_3_posoh-i-shlyapa_202784_fb2.epub  rm.epub  Азимов Айзек. Мать-Земля - royallib.com copy.epub
books_test/: Good_Omens_-_Neil_Gaiman_amp_Terry_Pratchett.epub
core/: embeddings.py  llm_client.py  rag_service.py  text_processor.py  vector_store.py
