[project]
name = "book"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "ebooklib>=0.19",
    "fastapi[standard]>=0.116.2",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
